tdf#114192: Speed up populating font list when FontConfig is used

Instead of calling psp::PrintFontManager::analyzeFontFile() get the font
names and metadata, use the values taken from FontConfig which nowadays
provides everything we need. This speeds up startup time significantly,
especially when there is a large number of fonts installed.

This also uses the correct style name, we were mixing name id 1 (family)
with name id 17 (typographic subfamily) while we should have been using
name id 2 (subfamily). The name ids 1, 2 and 16, 17 should be used
together not mixed and matched, and we need the former because it is
compatible with the R/I/B/BI model we (and the other office suite) use.

So instead of "Foo Black, Black", we now get "Foo Black, Regular".

On a system with 6616 fonts installed. Before:

$ export OOO_EXIT_POST_STARTUP=1
$ time ./instdir/program/soffice.bin --headless

real    0m4.744s
user    0m1.672s
sys     0m2.547s

after:
$ export OOO_EXIT_POST_STARTUP=1
$ time ./instdir/program/soffice.bin --headless

real    0m1.377s
user    0m0.563s
sys     0m0.297s

Change-Id: Ib7e358f16530c2daabc7ef677ef6a148fdf08e6e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155313
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>